# sieve2workers

./: Cargo.toml  README.md  package.json
src/: lib.rs  main.rs
src/codegen/: body.rs  buffer.rs  editheader.rs  fileinto.rs  mod.rs  reject.rs  spamtest.rs  test.rs  vacation.rs
src/codegen/js/: body.rs  editheader.rs  fileinto.rs  mod.rs  reject.rs  relational.rs  spamtest.rs  test.rs  vacation.rs
web-editor/: Cargo.toml  LICENSE_MIT
web-editor/gethostname.rs/src/: lib.rs
web-editor/src/: lib.rs
web-editor/www/: index.html  index.js  package.json  webpack.config.js
